fixed header alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
     border-bottom-style: solid;
     border-bottom-width: 2px;
     border-bottom-color: #cccccc;
+    width: 100%;
   }
 
   #header_tabs1 {
@@ -373,15 +374,15 @@ body {
 
 
 
-  @media screen and (max-width: 1150px) {
+   /* @media screen and (max-width: 1150px) {
 
     header {
       height: 70px;
     }
    
-    nav { 
+    nav {  */
     /* float: left; */
-    position: relative;
+    /* position: relative;
     top: 0px;
     left: 0px;
     margin-top: 10px;
@@ -409,15 +410,52 @@ body {
 
   }
 
+  }  */
+
+
+
+  @media screen and (max-width: 980px) {
+    
+    header {
+      height: 70px;
+    }
+   
+    nav { 
+    /* float: left; */
+    position: relative;
+    top: 0px;
+    left: 0px;
+    margin-top: 10px;
+    display: inline-block;
+  } 
+
+  h1 {
+    position: relative;
+    top: 0px;
+    left: 0px;
+    margin-left: 0px;
+    height: 70%;
+    display: inline-block;
   }
 
+  .myname {
+    margin-left: 0px;
+  }
 
-
-  @media screen and (max-width: 960px) {
+  #Portfolio {
+    width: 40%;
+    height: 800px;
+    margin-left: 10px;
+    margin-bottom: 0px;
+    padding: 10px;
+  }
+    
     
     #about_me {
-      width: 100%;
+      width: 560px;
+      padding: 30px;
       height: 100%;
+      margin: 0 auto;
       
     }
 
@@ -426,6 +464,7 @@ body {
       height: 1200px;
       margin-right: 20px;
       margin-left: 20px;
+      padding: 10px;
 
     }
 
@@ -442,7 +481,7 @@ body {
     }
 
     #contact_box {
-      width: 400px;
+      width: 600px;
       height: 100%;
       margin: 0 auto;
       margin-top: 10px;
@@ -493,20 +532,29 @@ body {
       padding: 0px;
     } */
 
+    footer {
+      flex-shrink: 0;
+    }
 
 
   }
 
   @media screen and (max-width: 680px) {
 
+    #contact_box {
+      width: 500px;
+    }
+    
     header {
       height: 140px;
+      width: 100%;
     }
 
     h1 {
       width: 100%;
       height: 50%;
       text-align: center;
+      padding: 0;
     }
 
     nav {
@@ -548,4 +596,100 @@ body {
       margin-left: 0 auto;
       padding: 0px;
     }
+
+    #about_me {
+      width: 95%;
+      padding: 10px;
+      height: 100%;
+      margin-left: 0;
+      margin-right: 0;
+      
+    }
+
+    #Portfolio {
+      width: 80%;
+      margin-left: 10px;
+      margin-right: 10px;
+      margin: auto;
+      padding: 10px;
+      height: 1450px;
+      margin-top: 10px;
+      padding-left: 70px;
+
+    }
+
+    #bio_image {
+      margin: 10px;;
+    }
+
+    footer {
+
+    flex-shrink: 0;
+    }
+
+    #hangman_box {
+      width: 80%;
+      margin: 10px;
+      height: 250px;
+    }
+
+    #hangman_button {
+      width: 100%;
+      height: 100px;
+      font-size: 24px;
+
+    }
+
+    #rpg_box {
+      width: 80%;
+      margin: 10px;
+      height: 250px;
+    }
+
+    #rpg_button {
+      width: 100%;
+      height: 100px;
+      font-size: 24px;
+
+    }
+
+    #trivia_box {
+      width: 80%;
+      margin: 10px;
+      height: 250px;
+    }
+
+    #trivia_button {
+      width: 100%;
+      height: 100px;
+      font-size: 24px;
+
+    }
+
+    #rutgers_box {
+      width: 80%;
+      margin: 10px;
+      height: 250px;
+    }
+
+    #rutgers_button {
+      width: 100%;
+      height: 100px;
+      font-size: 24px;
+
+    }
+
+    #rps_box {
+      width: 80%;
+      margin: 10px;
+      height: 250px;
+    }
+
+    #rps_button {
+      width: 100%;
+      height: 100px;
+      font-size: 24px;
+
+    }
+
   }
